# twitter-cli

./: Cargo.toml  README.md  install.sh  skill.md
.github/workflows/: release.yml
scripts/: gen_transaction_cache.py
src/: main.rs  output.rs
src/api/: client.rs  endpoints.rs  features.rs  headers.rs  mod.rs  transaction.rs  types.rs
src/auth/: browser.rs  login.rs  mod.rs  storage.rs
src/commands/: auth.rs  interact.rs  mod.rs  post.rs  search.rs  tweets.rs  users.rs
src/utils/: article.rs  error.rs  mod.rs  url.rs
