[package]
name = "twitter-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rookie = "0.5"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
base64 = "0.22"
urlencoding = "2"
chrono = "0.4"
regex = "1"
rand = "0.9"
rquest = { version = "5.1.0", features = ["cookies", "json"] }
rquest-util = "2.2.1"

[profile.release]
strip = true
lto = true
